# VoiceChange

app/: build.gradle
app/src/androidTest/java/com/zj/voicechange/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/zj/voicechange/: JniTestActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_jni_test.xml  activity_main.xml
app/src/main/res/values/: styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zj/voicechange/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
